--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
 
-    <div id="closedStoreOverlay" class="closed-overlay select-none">
+    <div id="closedStoreOverlay" class="closed-overlay select-none hidden">
         <div id="adminSecretLock" class="absolute top-5 right-5 text-gray-300 cursor-pointer p-2 opacity-30 hover:opacity-100 z-50">
             <i class="fas fa-lock fa-lg"></i>
         </div>
@@ -87,7 +87,7 @@
         </div>
     </div>
     
-    <div id="clientContent">
+    <div id="clientContent" class="block"> 
         
         <nav class="bg-purple-900 text-white p-4 shadow-2xl sticky top-0 z-40 border-b-4 border-yellow-400">
             <div class="max-w-5xl mx-auto flex justify-between items-center">
